# product-service

./: .gitignore  config.py  database.py  main.py  pyproject.toml  requirements.txt
app/: __init__.py
app/api/: analytics.py  category.py  inventory.py  order.py  pricing.py  product.py  search.py
models/: __init__.py  order.py  product.py
schemas/: __init__.py  product.py
scripts/: init_db.sql  mock_data.sql
utils/: __init__.py  port_manager.py
